...
                                        <rect key="frame" x="0.0" y="0.0" width="359" height="119"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                        <state key="normal" title="Create Workout Routine">
                                            <color key="titleColor" red="0.97148927979999999" green="1" blue="0.97109420769999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        <rect key="frame" x="0.0" y="124" width="359" height="119"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                        <state key="normal" title="Workouts">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                                        <rect key="frame" x="0.0" y="248" width="359" height="119"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                        <state key="normal" title="View Stats">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                    </view>
                    <navigationItem key="navigationItem" title="New Workout" id="2M3-3D-fgL">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="jgs-Fw-xaK">
                            <color key="tintColor" red="1" green="0.1720513417" blue="0.015082935780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Save" id="wgg-Mh-gOo">
                            <connections>
                                <action selector="savePressed:" destination="Yyo-jw-jFz" id="DXU-xh-8oQ"/>
...
                                        <rect key="frame" x="0.0" y="3" width="375" height="101.5"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Excercise Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U86-Bu-757">
                                                <rect key="frame" x="0.0" y="0.0" width="375" height="14"/>
                                                <nil key="textColor"/>
...
                                                <rect key="frame" x="252" y="0.0" width="123" height="0.0"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <state key="normal" title="+ Add Excercise">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
...
                        </userDefinedRuntimeAttributes>
                    </view>
                    <navigationItem key="navigationItem" title="Stats" id="PnD-56-OAH">
                        <barButtonItem key="rightBarButtonItem" title="Delete" id="1Ho-59-fdo">
                            <connections>
...
                                <rect key="frame" x="16" y="72" width="343" height="100"/>
                                <fontDescription key="fontDescription" type="system" pointSize="43"/>
                                <state key="normal" title="Start">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
